# teto-mod

./: CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  about.md  mod.json
.github/ISSUE_TEMPLATE/: bug_report.md
src/: Teto.cpp  main.cpp
src/include/: FryyGIF_v1.0.cpp  FryyGIF_v1.0.hpp  FryyUtils_v1.0.cpp  FryyUtils_v1.0.hpp  FryyVideo_v1.0.cpp  FryyVideo_v1.0.hpp
